feat: add support for scala v2.13